--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
 	"useTabs": true,
+	"printWidth": 80,
+	"tabWidth": 2,
+	"semi": true,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"trailingComma": "es5",
 	"plugins": ["prettier-plugin-svelte"],
 	"overrides": [
 		{
@@ -11,5 +13,8 @@
 				"parser": "svelte"
 			}
 		}
-	]
+	],
+	"svelteSortOrder": "options-scripts-styles-markup",
+	"svelteStrictMode": false,
+	"svelteBracketNewLine": true
 }
